# Nixman

./: .gitignore  CMakeLists.txt  ConfigGenerator.cpp  ConfigGenerator.h  ConfigState.cpp  ConfigState.h  Deployer.cpp  Deployer.h  Device.cpp  Device.h  FileUtils.cpp  FileUtils.h  Inventory.cpp  Inventory.h  Makefile  NixOption.h  NixPackage.h  NixQuery.cpp  NixQuery.h  README.md  SSHManager.cpp  SSHManager.h  TUI.cpp  TUI.h  default.nix  devices.json  main.cpp
